Mengatur media query

--- a/src/app.css
+++ b/src/app.css
@@ -145,12 +145,8 @@ body {
 }
 
 @media (max-width:1000px) {
-    #hero .circle {
-        right: 150px;
-    }
-
-    #hero .text {
-        margin-right: 200px;
+    #hero .image .circle {
+        margin-left: 100px;
     }
 
     .hamburger::before, .hamburger::after, .hamburger input {
@@ -160,9 +156,6 @@ body {
 }
 
 @media (max-width:830px) {
-    #hero {
-        min-height: 100vh;
-    }
 
     #hero .text {
         margin-left: 100px;
@@ -171,6 +164,7 @@ body {
     #hero .circle {
         width: 250px;
         height: 250px;
+        margin-top: 180px;
     }
 
     #about {
@@ -180,10 +174,6 @@ body {
     #skills {
         min-height: 50vh;
         width: 100%;
-    }
-
-    #skills h1 {
-        margin-right: 120px;
     }
 
     #skills .image {
@@ -206,15 +196,15 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
-        min-height: 80vh;
         min-width: 100%;
     }
 
     #hero .text {
         width: 100%;
-        margin-top: 320px;
         right: 0;
         text-align: center;
+        margin-top: 5px;
+        margin-right: 200px;
     }
 
     #hero h1 {
@@ -229,10 +219,9 @@ body {
     }
 
     #hero .image .circle {
-        top: 150px;
-        right: 125px;
-        width: 150px;
-        height: 150px;
+        width: 220px;
+        height: 220px;
+        margin-left: 10px;
     }
 
     #hero .social {
@@ -247,13 +236,13 @@ body {
 
     #about {
         width: 100%;
-        margin-left: 10px;
+        margin-right: 10px;
     }
 
     #about h1 {
         font-size: 1.5rem;
         text-align: center;
-        margin-left: 0px;
+        margin-right: 20px;
     }
 
     #about p {
@@ -262,9 +251,13 @@ body {
         margin-right: 20px;
     }
 
-    #skills h1{
+    #skills {
+        width: 100%;
+    }
+
+    #skills h1 {
         font-size: 1.5rem;
-        padding-right: 40px;
+        text-align: center;
     }
 
     #skills .container {
@@ -272,7 +265,7 @@ body {
     }
 
     #skills .container .skill {
-        margin-right: 120px;
+        margin-left: 50px;
     }
     
 
@@ -369,18 +362,15 @@ body {
 }
 
 @media (max-width:380px) {  
-    #skills h1{
-        margin-right: 75px;
-    }
 
     #skills .container .skill {
         margin-top: 10px;
         margin-bottom: 10px;
-        margin-right: 73px;
     }
 
     #hero .image .circle {
-        right: 70px;
+        display: fixed;
+        margin-right: -40px;
     }
 
     #hero .social {
