--- a/src/app.css
+++ b/src/app.css
@@ -201,21 +201,20 @@ body {
 
     #hero .text {
         width: 100%;
-        right: 0;
         text-align: center;
         margin-top: 5px;
         margin-right: 200px;
     }
 
     #hero h1 {
-        margin-left: 170px;
-        font-size: 1rem;
+        margin-left: 195px;
+        font-size: 1.5rem;
         margin-top: 0;
     }
 
     #hero h3 {
-        font-size: .7rem;
-        margin-left: 170px;
+        font-size: 1rem;
+        margin-left: 195px;
     }
 
     #hero .image .circle {
@@ -225,30 +224,28 @@ body {
     }
 
     #hero .social {
-        margin-left: 230px;
+        margin-left: 240px;
     }
 
     #hero .underline {
-        margin-left: 230px;
+        margin-left: 240px;
         border-radius: 9999px;
         height: 4px;
     }
 
     #about {
         width: 100%;
-        margin-right: 10px;
     }
 
     #about h1 {
         font-size: 1.5rem;
         text-align: center;
-        margin-right: 20px;
     }
 
     #about p {
         text-align: center;
         font-size: .5rem;
-        margin-right: 20px;
+        margin-right: 40px;
     }
 
     #skills {
@@ -256,16 +253,20 @@ body {
     }
 
     #skills h1 {
+        display: flex;
+        justify-content: center;
         font-size: 1.5rem;
-        text-align: center;
     }
 
     #skills .container {
         margin-left: 0;
+        justify-content: center;
     }
 
     #skills .container .skill {
-        margin-left: 50px;
+        margin-left: auto;
+        margin-right: auto;
+
     }
     
 
