--- a/src/app.css
+++ b/src/app.css
@@ -146,7 +146,7 @@ body {
 
 @media (max-width:1000px) {
     #hero .image .circle {
-        margin-left: 100px;
+        /* margin-left: 100px; */
     }
 
     .hamburger::before, .hamburger::after, .hamburger input {
@@ -158,18 +158,13 @@ body {
 @media (max-width:830px) {
 
     #hero .text {
-        margin-left: 100px;
+        /* margin-left: 100px; */
     }
 
-    #hero .circle {
-        width: 250px;
-        height: 250px;
-        margin-top: 180px;
-    }
-
-    #about {
-        width: 75%;
-    }
+    /* #hero.image img {
+        margin-bottom: 100px;
+        margin-right: 20px;
+    } */
 
     #skills {
         min-height: 50vh;
@@ -178,6 +173,10 @@ body {
 
     #skills .image {
         margin-left: 10px;
+    }
+
+    #about {
+        width: 100%;
     }
 
     #skills .image img {
@@ -190,8 +189,7 @@ body {
     }
 }
 
-@media (max-width:450px) {
-
+@media (max-width:660px) {
     #hero {
         display: flex;
         flex-direction: column;
@@ -203,32 +201,37 @@ body {
         width: 100%;
         text-align: center;
         margin-top: 5px;
-        margin-right: 200px;
+        /* margin-right: 200px; */
     }
 
     #hero h1 {
-        margin-left: 195px;
+        /* margin-left: 195px; */
         font-size: 1.5rem;
-        margin-top: 0;
     }
 
     #hero h3 {
         font-size: 1rem;
-        margin-left: 195px;
+        margin: 0 auto;
+        /* margin-left: 195px; */
     }
 
+    #hero .image{
+        width: 100%;
+        margin-top: 50px;
+    }
     #hero .image .circle {
-        width: 220px;
-        height: 220px;
-        margin-left: 10px;
+        /* width: 220px; */
+        /* margin-left: 10px; */
     }
 
     #hero .social {
-        margin-left: 240px;
+        justify-content: center;
+        /* margin-left: 240px; */
     }
 
     #hero .underline {
-        margin-left: 240px;
+        margin: 8px auto;
+        /* margin-left: 240px; */
         border-radius: 9999px;
         height: 4px;
     }
@@ -245,7 +248,6 @@ body {
     #about p {
         text-align: center;
         font-size: .5rem;
-        margin-right: 40px;
     }
 
     #skills {
@@ -253,9 +255,8 @@ body {
     }
 
     #skills h1 {
-        display: flex;
-        justify-content: center;
         font-size: 1.5rem;
+        text-align: center;
     }
 
     #skills .container {
@@ -268,32 +269,26 @@ body {
         margin-right: auto;
 
     }
-    
-
-    #hero .text {
-        margin-left: 20px;
-    }
 
     #project h1 {
         text-align: center;
         margin-top: 50px;
         font-size: 1.5rem;
-        margin-right: 20px;
+        /* margin-right: 20px; */
     }
 
     #project .boxes {
-        text-align: center;
-        margin-left: 180px;
+        /* margin-left: 180px; */
     }
 
     #project .box {
+        text-align: center;
         width: 200px;
         height: 120px;
-        margin-right: 200px;
+        margin: 0 8px;
     }
 
     #project .made {
-        margin-right: 200px;
         font-size: .8rem;
     }
 
@@ -369,28 +364,26 @@ body {
         margin-bottom: 10px;
     }
 
-    #hero .image .circle {
-        display: fixed;
-        margin-right: -40px;
+    #hero .image img {
+        margin-top: 80px;
+        width: 150px;
+        height: 150px;
     }
 
-    #hero .social {
-        margin-left: 185px;
+    #hero h1 {
+        font-size: 1rem;
+    }
+
+    #hero h3 {
+        font-size: .8rem;
+    }
+
+    #hero svg {
+        font-size: .8rem;
     }
 
     #hero .underline {
-        margin-left: 185px;
+        width: 100px;
     }
 
-    #about h1 {
-        margin-left: -9px;
-    }
-
-    #project h1 {
-        margin-left: 45px;
-    }
-
-    #project .made {
-        margin-left: 43px;
-    }
 }
