--- a/src/app.css
+++ b/src/app.css
@@ -206,11 +206,11 @@ body {
 
     #hero h1 {
         /* margin-left: 195px; */
-        font-size: 1.5rem;
+        font-size: 2rem;
     }
 
     #hero h3 {
-        font-size: 1rem;
+        font-size: 1.5rem;
         margin: 0 auto;
         /* margin-left: 195px; */
     }
@@ -218,10 +218,6 @@ body {
     #hero .image{
         width: 100%;
         /* margin-top: 50px; */
-    }
-    #hero .image .circle {
-        /* width: 220px; */
-        /* margin-left: 10px; */
     }
 
     #hero .social {
@@ -241,13 +237,13 @@ body {
     }
 
     #about h1 {
-        font-size: 1.5rem;
+        font-size: 2rem;
         text-align: center;
     }
 
     #about p {
         text-align: center;
-        font-size: .5rem;
+        font-size: 1rem;
     }
 
     #skills {
@@ -255,7 +251,7 @@ body {
     }
 
     #skills h1 {
-        font-size: 1.5rem;
+        font-size2rem;
         text-align: center;
     }
 
