Mengubah font size pada hero section

--- a/src/app.css
+++ b/src/app.css
@@ -145,10 +145,6 @@ body {
 }
 
 @media (max-width:1000px) {
-    #hero .image .circle {
-        /* margin-left: 100px; */
-    }
-
     .hamburger::before, .hamburger::after, .hamburger input {
         overflow: hidden;
         display: none;
@@ -156,15 +152,6 @@ body {
 }
 
 @media (max-width:830px) {
-
-    #hero .text {
-        /* margin-left: 100px; */
-    }
-
-    /* #hero.image img {
-        margin-bottom: 100px;
-        margin-right: 20px;
-    } */
 
     #skills {
         min-height: 50vh;
@@ -206,7 +193,7 @@ body {
 
     #hero h1 {
         /* margin-left: 195px; */
-        font-size: 2rem;
+        font-size: 2.5rem;
     }
 
     #hero h3 {
@@ -217,7 +204,10 @@ body {
 
     #hero .image{
         width: 100%;
-        /* margin-top: 50px; */
+    }
+
+    #hero .image img {
+        margin-top: 180px;
     }
 
     #hero .social {
@@ -234,6 +224,8 @@ body {
 
     #about {
         width: 100%;
+        padding-left: 40px;
+        padding-right: 40px;
     }
 
     #about h1 {
@@ -242,7 +234,7 @@ body {
     }
 
     #about p {
-        text-align: center;
+        text-align: justify;
         font-size: 1rem;
     }
 
@@ -251,7 +243,7 @@ body {
     }
 
     #skills h1 {
-        font-size2rem;
+        font-size:2rem;
         text-align: center;
     }
 
@@ -263,7 +255,6 @@ body {
     #skills .container .skill {
         margin-left: auto;
         margin-right: auto;
-
     }
 
     #project h1 {
@@ -271,10 +262,6 @@ body {
         margin-top: 50px;
         font-size: 1.5rem;
         /* margin-right: 20px; */
-    }
-
-    #project .boxes {
-        /* margin-left: 180px; */
     }
 
     #project .box {
@@ -305,7 +292,7 @@ body {
         padding-top: calc(val(--hamburger-height) + val(--hamburger-margin) + 1rem);
         /* max-width: 20rem;
         min-width: 20rem; */
-        width: 100%;
+        width: 300px;
         height: 100vh;
         color: black;
         display: flex;
