--- a/src/app.css
+++ b/src/app.css
@@ -331,6 +331,11 @@ body {
         margin: 0;
     }
 
+    audio {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     footer {
         padding-left: 50px;
         padding-right: 50px;
